SOme API progress

--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "start": "tsc && electron ./compiled"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/electron": "^1.6.10",
     "@types/filenamify": "^2.0.2",
     "@types/jquery": "^3.3.31",
     "@types/node": "^14.0.1",
     "@types/string-similarity": "^3.0.0",
     "@types/utf8": "^2.1.6",
+    "axios": "^0.19.2",
     "electron": "^6.0.12",
     "electron-storage": "^1.0.7",
     "filenamify": "^4.1.0",
     "jquery": "^3.4.1",
+    "querystring": "^0.2.0",
     "require-uncached": "^2.0.0",
     "string-similarity": "^3.0.0",
     "tslib": "^2.0.0",
