First runnable version implemented.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "date-fns": "^2.14.0",
     "electron": "^9.0.0",
     "filenamify": "^4.1.0",
     "querystring": "^0.2.0",
