--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "scripts": {
     "start": "tsc && electron ./compiled",
+    "convert": "tsc && node ./compiled/converter",
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@types/fluent-ffmpeg": "^2.1.14",
     "axios": "^0.19.2",
     "date-fns": "^2.14.0",
     "electron": "^9.0.0",
     "filenamify": "^4.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "querystring": "^0.2.0",
     "sanitize-filename": "^1.6.3",
     "string-similarity": "^4.0.1",
