--- a/package.json
+++ b/package.json
@@ -14,19 +14,21 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@types/fluent-ffmpeg": "^2.1.14",
     "axios": "^0.19.2",
     "date-fns": "^2.14.0",
     "electron": "^9.0.0",
     "filenamify": "^4.1.0",
     "fluent-ffmpeg": "^2.1.2",
+    "ping": "^0.2.3",
     "querystring": "^0.2.0",
     "sanitize-filename": "^1.6.3",
     "string-similarity": "^4.0.1",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.14",
     "@types/node": "^14.0.4",
+    "@types/ping": "^0.2.0",
     "@types/sanitize-filename": "^1.6.3",
     "@types/string-similarity": "^3.0.0",
     "@types/utf8": "^2.1.6",
