Hard changed and improved way of downloader mechanism

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,8 @@
     ],
     "exclude": [
       "./src/public/",
-      "./node_modules/"
+      "./node_modules/",
+      "./temp/",
+      "./out/"
     ]
   }
