--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "date-fns": "^2.14.0",
-    "electron": "^9.0.0",
+    "electron": "^9.0.4",
     "filenamify": "^4.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "ping": "^0.2.3",
+    "proper-lockfile": "^4.1.1",
     "querystring": "^0.2.0",
     "sanitize-filename": "^1.6.3",
     "string-similarity": "^4.0.1",
@@ -27,14 +28,15 @@
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.14",
-    "@types/node": "^14.0.4",
+    "@types/node": "^14.0.13",
     "@types/ping": "^0.2.0",
+    "@types/proper-lockfile": "^4.1.1",
     "@types/sanitize-filename": "^1.6.3",
     "@types/string-similarity": "^3.0.0",
     "@types/utf8": "^2.1.6",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
     "tslib": "^2.0.0",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.5"
   }
 }
