--- a/package.json
+++ b/package.json
@@ -10,29 +10,44 @@
   "scripts": {
     "start": "tsc && electron ./compiled",
     "convert": "tsc && node ./compiled/converter",
+    "service": "tsc && node ./compiled/service",
     "fix-paths": "tsc && node ./compiled/scripts/fix_paths.js",
     "postinstall": "patch-package"
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.14.0",
-    "electron": "^9.0.4",
+    "deepmerge": "^4.2.2",
+    "electron": "^9.0.5",
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "filenamify": "^4.1.0",
     "fluent-ffmpeg": "^2.1.2",
+    "morgan": "^1.10.0",
     "ping": "^0.2.3",
     "proper-lockfile": "^4.1.1",
     "querystring": "^0.2.0",
     "sanitize-filename": "^1.6.3",
     "string-similarity": "^4.0.1",
+    "swagger-ui-express": "^4.1.4",
+    "ts-httpexceptions": "^4.1.0",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.6",
+    "@types/deepmerge": "^2.2.0",
+    "@types/express": "^4.17.6",
     "@types/fluent-ffmpeg": "^2.1.14",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.13",
     "@types/ping": "^0.2.0",
     "@types/proper-lockfile": "^4.1.1",
     "@types/sanitize-filename": "^1.6.3",
     "@types/string-similarity": "^3.0.0",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/utf8": "^2.1.6",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
